unpackaged/main/default/objects/Vendor_Contracts__c/Vendor_Contracts__c.object-meta.xml
<CustomObject>
    <description>Table to store data on Vendor Contracts</description>
    <label>Vendor Contracts</label>
    <nameField>
        <displayFormat>VC-{000000}</displayFormat>
        <label>Vendor Contracts Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vendor Contracts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>