unpackaged/main/default/objects/Vendor_Contracts__c/fields/Approved_To_Pay__c.field-meta.xml
<CustomField>
    <fullName>Approved_To_Pay__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>If this field is "Not Checked", do not pay any A/P bills for this Vendor Contract.</inlineHelpText>
    <label>Approved To Pay</label>
    <type>Checkbox</type>
</CustomField>