unpackaged/main/default/objects/Vendor_Contracts__c/fields/Approved_To_Pay_Banner__c.field-meta.xml
<CustomField>
    <fullName>Approved_To_Pay_Banner__c</fullName>
    <formula>IF( Approved_To_Pay__c, IMAGE("/servlet/servlet.FileDownload?file=0151W000003Jlak", "Green"),IMAGE("/servlet/servlet.FileDownload?file=0151W000003Jlau", "Red"))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approved To Pay</label>
    <type>Text</type>
</CustomField>