unpackaged/main/default/objects/Vendor_Contracts__c/fields/Authorized_Account_Administrator__c.field-meta.xml
<CustomField>
    <fullName>Authorized_Account_Administrator__c</fullName>
    <label>Authorized Account Administrator</label>
    <length>25</length>
    <type>Text</type>
</CustomField>