unpackaged/main/default/objects/Vendor_Contracts__c/fields/Auto_Renew_Text__c.field-meta.xml
<CustomField>
    <fullName>Auto_Renew_Text__c</fullName>
    <label>Auto Renew Text</label>
    <length>12</length>
    <type>Text</type>
</CustomField>