unpackaged/main/default/objects/Vendor_Contracts__c/fields/Carrier_Billing_Status__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Billing_Status__c</fullName>
    <formula>Text( Client_Account__r.Carrier_Billing_Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Carrier Billing Status</label>
    <type>Text</type>
</CustomField>