unpackaged/main/default/objects/Vendor_Contracts__c/fields/Client_Account_Alias__c.field-meta.xml
<CustomField>
    <fullName>Client_Account_Alias__c</fullName>
    <formula>Client_Account__r.Account_Alias__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Account Alias</label>
    <type>Text</type>
</CustomField>