unpackaged/main/default/objects/Vendor_Contracts__c/fields/Client_on_Spreadsheet__c.field-meta.xml
<CustomField>
    <fullName>Client_on_Spreadsheet__c</fullName>
    <label>Client on Spreadsheet</label>
    <length>50</length>
    <type>Text</type>
</CustomField>