unpackaged/main/default/objects/Vendor_Contracts__c/fields/Contract_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Contract_Payment_Amount__c</fullName>
    <label>Contract Payment Amount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>