unpackaged/main/default/objects/Vendor_Contracts__c/fields/Last_Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>Last_Amount_Paid__c</fullName>
    <label>Last Amount Paid</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>