unpackaged/main/default/objects/Vendor_Contracts__c/fields/Last_Date_Paid__c.field-meta.xml
<CustomField>
    <fullName>Last_Date_Paid__c</fullName>
    <label>Last Date Paid</label>
    <type>Date</type>
</CustomField>