unpackaged/main/default/objects/Vendor_Contracts__c/fields/Last_Payment_Threshhold_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Payment_Threshhold_Date__c</fullName>
    <formula>TODAY()-40</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Payment Threshhold Date</label>
    <type>Date</type>
</CustomField>