unpackaged/main/default/objects/Vendor_Contracts__c/fields/Last_Payment_Threshhold_Flag__c.field-meta.xml
<CustomField>
    <fullName>Last_Payment_Threshhold_Flag__c</fullName>
    <formula>Last_Date_Paid__c &lt; (TODAY()-40)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Payment Threshhold Flag</label>
    <type>Checkbox</type>
</CustomField>