unpackaged/main/default/objects/Vendor_Contracts__c/fields/Master_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Master_Account_Number__c</fullName>
    <label>Master Account Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>