unpackaged/main/default/objects/Vendor_Contracts__c/fields/Payment_Portal_Password__c.field-meta.xml
<CustomField>
    <fullName>Payment_Portal_Password__c</fullName>
    <label>Payment Portal Password</label>
    <length>25</length>
    <type>Text</type>
</CustomField>