unpackaged/main/default/objects/Vendor_Contracts__c/fields/Payment_Portal_URL__c.field-meta.xml
<CustomField>
    <fullName>Payment_Portal_URL__c</fullName>
    <label>Payment Portal URL</label>
    <length>50</length>
    <type>Text</type>
</CustomField>