unpackaged/main/default/objects/Vendor_Contracts__c/fields/Payment_Portal_User_Name__c.field-meta.xml
<CustomField>
    <fullName>Payment_Portal_User_Name__c</fullName>
    <label>Payment Portal User Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>