unpackaged/main/default/objects/Vendor_Contracts__c/fields/RB_Line_Description__c.field-meta.xml
<CustomField>
    <fullName>RB_Line_Description__c</fullName>
    <formula>Recurring_Billing_Line__r.RB_Invoice_Line_Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recurring Billing Line Description</label>
    <type>Text</type>
</CustomField>