unpackaged/main/default/objects/Vendor_Contracts__c/fields/RB_Line_Item_Total__c.field-meta.xml
<CustomField>
    <fullName>RB_Line_Item_Total__c</fullName>
    <formula>Recurring_Billing_Line__r.AcctSeed__Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recurring Billing Line Item Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>