unpackaged/main/default/objects/Vendor_Contracts__c/fields/Recurring_Billing_Line__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Billing_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recurring Billing Line</label>
    <referenceTo>AcctSeed__Recurring_Billing_Line__c</referenceTo>
    <relationshipLabel>Vendor Contracts</relationshipLabel>
    <relationshipName>Vendor_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>