unpackaged/main/default/objects/Vendor_Contracts__c/fields/Sub_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Sub_Account_Number__c</fullName>
    <label>Sub Account Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>