unpackaged/main/default/objects/Vendor_Contracts__c/fields/Vendor_Account__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select the Vendor associated with this contract.</inlineHelpText>
    <label>Vendor Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Vendor Contracts (Vendor Account)</relationshipLabel>
    <relationshipName>Vendor_Contracts1</relationshipName>
    <type>Lookup</type>
</CustomField>