unpackaged/main/default/objects/Vendor_Contracts__c/fields/Vendor_On_Spreadsheet__c.field-meta.xml
<CustomField>
    <fullName>Vendor_On_Spreadsheet__c</fullName>
    <label>Vendor On Spreadsheet</label>
    <length>50</length>
    <type>Text</type>
</CustomField>