unpackaged/main/default/objects/Vendor_Contracts__c/fields/Vendor_Telephone__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Telephone__c</fullName>
    <formula>Vendor_Account__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vendor Telephone</label>
    <type>Text</type>
</CustomField>