unpackaged/main/default/objects/Vendor_Contracts__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Approved_To_Pay__c</columns>
    <columns>Approved_To_Pay_Banner__c</columns>
    <columns>Client_Account__c</columns>
    <columns>Master_Account_Number__c</columns>
    <columns>Description__c</columns>
    <columns>Last_Date_Paid__c</columns>
    <columns>Last_Amount_Paid__c</columns>
    <columns>End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>